2005-06-16  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (HTMLFormatter_default::make_link):
	fix a bug that loses wikinames in the table of contents.

2005-06-15  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.rb: use @options['attach.cgi_name']
	to change the filename of 'attach.cgi' (by Koichiro Ohba).

	* style/default/html_formatter.rb: add 'class="external"' to
	InterWiki links (report by Kazuhiro NISHIYAMA).

	* template/edit.html: move 'preview' and 'save' button just next
	to the textarea.

	* hiki/aliaswiki.rb (AliasWiki::initialize): the argument is now
	contents of the aliaswiki page instead of 'db' and 'conf'.
	* hiki/interwiki.rb (InterWiki::initialize): the argument is now
	contents of the aliaswiki page instead of 'db', 'conf' and
	'plugin'.
	* style/default/html_formatter.rb: follow changes of
	aliaswiki.rb and interwiki.rb.

	* style/default/html_formatter.rb: make a normal anchor if a link
	is missing interwiki link (by Kouhei Sutou).

2005-06-14  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/en/edit_user.rb (label_edit_user_title): add a
	missing resource (by GOTO Naohisa).

	* template/login.html, messages/en.rb, messages/fr.rb,
	messages/it.rb, messages/ja.rb (msg_login_info): add an
	information about admin login.

	* misc/plugin/history.rb: not display changes in 'svn' or
	'svnsingle' mode (by ISOBE, Kazuhiko).

2005-06-13  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/command.rb, hiki/config.rb, hiki/plugin.rb: use
	Config#admin_name as a admin's login name.

2005-06-13  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb: use '@user' for a commit message if exists.
	* hiki/repos/svn.rb (ReposSvnBase::commit, ReposSvnBase::delete):
	add a second argument for a commit message.
	* hiki/repos/cvs.rb: ditto.
	* hiki/repos/default.rb (ReposDefault::default_msg): add a new
	method for the default commit message.

2005-06-12  Kazuhiko  <kazuhiko@fdiary.net>